# learn-rust

./: .gitignore  README.md  hugo.toml
axum-project/: Cargo.toml
axum-project/src/: error.rs  main.rs  model.rs
axum-project/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
axum-project/tests/: quick_dev.rs
content/: _index.md
content/docs/axum/: 05_setup.md  10_basic.md  20_middleware.md  _index.md  basic.md
content/docs/book/: _index.md  flow-control.md  setup.md
content/docs/clickhouse/: _index.md  dictionary.md
content/docs/posts/: _index.md  k8s-nginx-ingress-proxy-ssl.md
content/menu/: _index.md
learn_rust/: Cargo.toml
learn_rust/src/: main.rs
