[package]
name = "axum-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
anyhow = "1.0.89"
httpc-test = "0.1.10"

