[package]
name = "axum-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
lazy-regex = "3.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"]}
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["trace", "fs"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
anyhow = "1.0.89"
httpc-test = "0.1.10"

